@@ -15,6 +15,9 @@
     <script src="./phaser.js"></script>
     <script src="./snake.js"></script>
     <script src="./score.js"></script>
+    <script src="./States/menuState.js"> </script>        
+    <script src="./States/Gameover.js"> </script> 
+    <script src="./States/playng.js"> </script>
     <script src="./game.js"></script>
 </body>
 
